--- a/iller.yaml
+++ b/iller.yaml
@@ -20,6 +20,13 @@ prereqs:
 plugins:
   - +config: Author::CSSON
 
+  - +remove_plugin: UploadToCPAN
+
+  - +plugin: UploadToStratopan
+    repo: TheFirst
+    stack: master
+
+
 ---
 doctype: weaver
 
