--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-; This file was auto-generated from iller.yaml by Dist::Iller on 2018-11-03 23:02:29 UTC.
+; This file was auto-generated from iller.yaml by Dist::Iller on 2018-11-29 20:56:21 UTC.
 ; The following configs were used:
 ; * Dist::Iller::Config::Author::CSSON: 0.0322
 
@@ -96,8 +96,6 @@ arg = !prereq_matches_use !build_prereq_matches_use
 
 [Test::EOF]
 
-[Test::Version]
-
 [Test::Compile]
 
 [Test::ReportPrereqs]
@@ -128,6 +126,8 @@ release_branch = release
 
 [ConfirmRelease]
 
+[UploadToCPAN]
+
 [TravisYML]
 perl_version = 5.14 5.16 5.18 5.20 5.22 5.24
 
@@ -152,10 +152,6 @@ commit_msg = Bump version after %v
 remotes_must_exist = 1
 
 [Clean]
-
-[UploadToStratopan]
-repo = TheFirst
-stack = master
 
 [Prereqs / DevelopRequires]
 Badge::Depot = 0.0103
@@ -208,10 +204,9 @@ Dist::Zilla::Plugin::Test::EOL = 0.18
 Dist::Zilla::Plugin::Test::Kwalitee::Extra = v0.2.1
 Dist::Zilla::Plugin::Test::NoTabs = 0.15
 Dist::Zilla::Plugin::Test::ReportPrereqs = 0.027
-Dist::Zilla::Plugin::Test::Version = 1.05
 Dist::Zilla::Plugin::TestRelease = 0
 Dist::Zilla::Plugin::TravisYML = 1.15
-Dist::Zilla::Plugin::UploadToStratopan = 0
+Dist::Zilla::Plugin::UploadToCPAN = 0
 Pod::Elemental::Transformer::List = 0
 Pod::Weaver::Plugin::SingleEncoding = 0
 Pod::Weaver::Plugin::Transformer = 0
@@ -234,9 +229,26 @@ Dist::Iller = 0.1408
 Dist::Iller::Config::Author::CSSON = 0.0322
 
 [Prereqs / RuntimeRequires]
-perl = 5.010000
+Carp = 1.38
+DBIx::Class = 0
+DBIx::Class::Candy = 0
+List::SomeUtils = 0
+List::Util = 1.45
+Module::Loader = 0
+Moo = 0
+Safe::Isa = 1.000005
+Scalar::Util = 0
+String::CamelCase = 0.02
+Sub::Exporter::Progressive = 0
+Syntax::Keyword::Try = 0
+boolean = 0
+experimental = 0
+parent = 0
+perl = 5.020000
 
 [Prereqs / TestRequires]
+DateTime = 1.05
+Module::Load = 0.26
 Test::More = 0.96
 
 ; authordep Badge::Depot = 0.0103
@@ -289,10 +301,9 @@ Test::More = 0.96
 ; authordep Dist::Zilla::Plugin::Test::Kwalitee::Extra = v0.2.1
 ; authordep Dist::Zilla::Plugin::Test::NoTabs = 0.15
 ; authordep Dist::Zilla::Plugin::Test::ReportPrereqs = 0.027
-; authordep Dist::Zilla::Plugin::Test::Version = 1.05
 ; authordep Dist::Zilla::Plugin::TestRelease = 0
 ; authordep Dist::Zilla::Plugin::TravisYML = 1.15
-; authordep Dist::Zilla::Plugin::UploadToStratopan = 0
+; authordep Dist::Zilla::Plugin::UploadToCPAN = 0
 ; authordep Pod::Elemental::Transformer::List = 0
 ; authordep Pod::Weaver::Plugin::SingleEncoding = 0
 ; authordep Pod::Weaver::Plugin::Transformer = 0
