--- a/iller.yaml
+++ b/iller.yaml
@@ -22,6 +22,7 @@ prereqs:
       - Carp
       - DBIx::Class
       - DBIx::Class::Candy
+      - DBIx::Class::Helpers
       - List::SomeUtils
       - List::Util
       - Module::Loader
