--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-; This file was auto-generated from iller.yaml by Dist::Iller on 2018-11-29 20:56:21 UTC.
+; This file was auto-generated from iller.yaml by Dist::Iller on 2018-11-29 21:09:29 UTC.
 ; The following configs were used:
 ; * Dist::Iller::Config::Author::CSSON: 0.0322
 
@@ -232,6 +232,7 @@ Dist::Iller::Config::Author::CSSON = 0.0322
 Carp = 1.38
 DBIx::Class = 0
 DBIx::Class::Candy = 0
+DBIx::Class::Helpers = 0
 List::SomeUtils = 0
 List::Util = 1.45
 Module::Loader = 0
