Changes + generated files

--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-; This file was auto-generated from iller.yaml by Dist::Iller on 2020-09-12 15:18:27 UTC.
+; This file was auto-generated from iller.yaml by Dist::Iller on 2020-10-08 18:32:16 UTC.
 ; The following configs were used:
 ; * Dist::Iller::Config::Author::CSSON: 0.0325
 
@@ -237,6 +237,7 @@ List::SomeUtils = 0
 List::Util = 1.45
 Module::Loader = 0
 Moo = 0
+Ref::Util = 0
 Safe::Isa = 1.000005
 Scalar::Util = 0
 String::CamelCase = 0.02
