Various improvements during Purf dev

--- a/weaver.ini
+++ b/weaver.ini
@@ -1,6 +1,6 @@
-; This file was auto-generated from iller.yaml by Dist::Iller on 2018-10-11 17:57:50 UTC.
+; This file was auto-generated from iller.yaml by Dist::Iller on 2024-12-31 21:20:02 UTC.
 ; The following configs were used:
-; * Dist::Iller::Config::Author::CSSON: 0.0322
+; * Dist::Iller::Config::Author::CSSON: 0.0328
 
 [@CorePrep]
 
@@ -9,12 +9,10 @@
 [Name]
 
 [Badges]
--kwalitee_author = CSSON
+-githubactions_workflow = makefile-test
 badge = perl
-badge = travis
-badge = kwalitee
-badge = cpantesters
 badge = coverage
+badge = githubactions
 formats = html, markdown
 
 [Version]
