--- a/dist.ini
+++ b/dist.ini
@@ -1,12 +1,12 @@
-; This file was auto-generated from iller.yaml by Dist::Iller on 2020-10-08 18:32:16 UTC.
+; This file was auto-generated from iller.yaml by Dist::Iller on 2025-01-01 15:50:23 UTC.
 ; The following configs were used:
-; * Dist::Iller::Config::Author::CSSON: 0.0325
+; * Dist::Iller::Config::Author::CSSON: 0.0328
 
 name = DBIx-Class-Smooth
 author = Erik Carlsson <info@code301.com>
 license = Perl_5
 copyright_holder = Erik Carlsson
-copyright_year = 2018
+copyright_year = 2025
 
 [Git::GatherDir]
 exclude_filename = META.json
@@ -40,11 +40,6 @@ stats_skip_file = .travis.yml
 stats_skip_file = Makefile.PL
 stats_skip_file = README.md
 stats_text =
-
-[NextRelease::Grouped]
-auto_order = 0
-format_date = %{yyyy-MM-dd HH:mm:ss VVV}d
-groups = API Changes, New Features, Enhancements, Requirements, Testing, Other Changes, Bug Fixes, Documentation, Stats & Dependency Changes
 
 [PodWeaver]
 
@@ -87,9 +82,6 @@ directory = examples
 
 [Git::Contributors]
 
-[Test::Kwalitee::Extra]
-arg = !prereq_matches_use !build_prereq_matches_use
-
 [Test::NoTabs]
 
 [Test::EOL]
@@ -128,44 +120,26 @@ release_branch = release
 
 [UploadToCPAN]
 
-[TravisYML]
-perl_version = 5.14 5.16 5.18 5.20 5.22 5.24
+[Author::CSSON::GithubActions::Workflow::TestWithMakefile]
 
 [Git::Commit / CommitBeforeTag]
 allow_dirty_match = .
 commit_msg = Release %v%n%n%c
 
-[Git::Tag]
-tag_format = %v
-tag_message = Release %v%n%n%c
-
-[InstallRelease]
-install_command = cpanm .
-
-[BumpVersionAfterRelease::Transitional]
-
 [Git::Commit / CommitAfterRelease]
 allow_dirty_match = .
 commit_msg = Bump version after %v
 
-[Git::Push]
-remotes_must_exist = 1
-
-[Clean]
-
 [Prereqs / DevelopRequires]
 Badge::Depot = 0.0103
 Badge::Depot::Plugin::Coverage = 0
-Badge::Depot::Plugin::Cpantesters = 0
-Badge::Depot::Plugin::Kwalitee = 0
+Badge::Depot::Plugin::Githubactions = 0
 Badge::Depot::Plugin::Perl = 0
-Badge::Depot::Plugin::Travis = 0
 Dist::Zilla = 6.015
+Dist::Zilla::Plugin::Author::CSSON::GithubActions::Workflow::TestWithMakefile = 0.0106
 Dist::Zilla::Plugin::Authority = 1.009
-Dist::Zilla::Plugin::BumpVersionAfterRelease::Transitional = 0.009
 Dist::Zilla::Plugin::ChangeStats::Dependencies::Git = 0.0200
 Dist::Zilla::Plugin::CheckChangesHasContent = 0.011
-Dist::Zilla::Plugin::Clean = 0.07
 Dist::Zilla::Plugin::ConfirmRelease = 0
 Dist::Zilla::Plugin::CopyFilesFromBuild = 0.170880
 Dist::Zilla::Plugin::DistIller::MetaGeneratedBy = 0
@@ -176,10 +150,7 @@ Dist::Zilla::Plugin::Git::CheckFor::CorrectBranch = 0.014
 Dist::Zilla::Plugin::Git::Commit = 0
 Dist::Zilla::Plugin::Git::Contributors = 0.035
 Dist::Zilla::Plugin::Git::GatherDir = 0
-Dist::Zilla::Plugin::Git::Push = 0
-Dist::Zilla::Plugin::Git::Tag = 0
 Dist::Zilla::Plugin::GithubMeta = 0.54
-Dist::Zilla::Plugin::InstallRelease = 0.008
 Dist::Zilla::Plugin::License = 0
 Dist::Zilla::Plugin::MakeMaker = 0
 Dist::Zilla::Plugin::Manifest = 0
@@ -189,7 +160,6 @@ Dist::Zilla::Plugin::MetaJSON = 0
 Dist::Zilla::Plugin::MetaNoIndex = 0
 Dist::Zilla::Plugin::MetaProvides::Package = 2.004003
 Dist::Zilla::Plugin::MetaYAML = 0
-Dist::Zilla::Plugin::NextRelease::Grouped = 0.0200
 Dist::Zilla::Plugin::PodSyntaxTests = 0
 Dist::Zilla::Plugin::PodWeaver = 4.006
 Dist::Zilla::Plugin::Prereqs = 0
@@ -201,11 +171,9 @@ Dist::Zilla::Plugin::ShareDir = 0
 Dist::Zilla::Plugin::Test::Compile = 2.058
 Dist::Zilla::Plugin::Test::EOF = 0.0501
 Dist::Zilla::Plugin::Test::EOL = 0.18
-Dist::Zilla::Plugin::Test::Kwalitee::Extra = v0.2.1
 Dist::Zilla::Plugin::Test::NoTabs = 0.15
 Dist::Zilla::Plugin::Test::ReportPrereqs = 0.027
 Dist::Zilla::Plugin::TestRelease = 0
-Dist::Zilla::Plugin::TravisYML = 1.15
 Dist::Zilla::Plugin::UploadToCPAN = 0
 Pod::Elemental::Transformer::List = 0
 Pod::Weaver::Plugin::SingleEncoding = 0
@@ -225,8 +193,8 @@ Test::NoTabs = 1.4
 Test::Warnings = 0.026
 
 [Prereqs / DevelopSuggests]
-Dist::Iller = 0.1408
-Dist::Iller::Config::Author::CSSON = 0.0325
+Dist::Iller = 0.1411
+Dist::Iller::Config::Author::CSSON = 0.0328
 
 [Prereqs / RuntimeRequires]
 Carp = 1.38
@@ -257,16 +225,13 @@ Test::mysqld = 0
 
 ; authordep Badge::Depot = 0.0103
 ; authordep Badge::Depot::Plugin::Coverage = 0
-; authordep Badge::Depot::Plugin::Cpantesters = 0
-; authordep Badge::Depot::Plugin::Kwalitee = 0
+; authordep Badge::Depot::Plugin::Githubactions = 0
 ; authordep Badge::Depot::Plugin::Perl = 0
-; authordep Badge::Depot::Plugin::Travis = 0
 ; authordep Dist::Zilla = 6.015
+; authordep Dist::Zilla::Plugin::Author::CSSON::GithubActions::Workflow::TestWithMakefile = 0.0106
 ; authordep Dist::Zilla::Plugin::Authority = 1.009
-; authordep Dist::Zilla::Plugin::BumpVersionAfterRelease::Transitional = 0.009
 ; authordep Dist::Zilla::Plugin::ChangeStats::Dependencies::Git = 0.0200
 ; authordep Dist::Zilla::Plugin::CheckChangesHasContent = 0.011
-; authordep Dist::Zilla::Plugin::Clean = 0.07
 ; authordep Dist::Zilla::Plugin::ConfirmRelease = 0
 ; authordep Dist::Zilla::Plugin::CopyFilesFromBuild = 0.170880
 ; authordep Dist::Zilla::Plugin::DistIller::MetaGeneratedBy = 0
@@ -277,10 +242,7 @@ Test::mysqld = 0
 ; authordep Dist::Zilla::Plugin::Git::Commit = 0
 ; authordep Dist::Zilla::Plugin::Git::Contributors = 0.035
 ; authordep Dist::Zilla::Plugin::Git::GatherDir = 0
-; authordep Dist::Zilla::Plugin::Git::Push = 0
-; authordep Dist::Zilla::Plugin::Git::Tag = 0
 ; authordep Dist::Zilla::Plugin::GithubMeta = 0.54
-; authordep Dist::Zilla::Plugin::InstallRelease = 0.008
 ; authordep Dist::Zilla::Plugin::License = 0
 ; authordep Dist::Zilla::Plugin::MakeMaker = 0
 ; authordep Dist::Zilla::Plugin::Manifest = 0
@@ -290,7 +252,6 @@ Test::mysqld = 0
 ; authordep Dist::Zilla::Plugin::MetaNoIndex = 0
 ; authordep Dist::Zilla::Plugin::MetaProvides::Package = 2.004003
 ; authordep Dist::Zilla::Plugin::MetaYAML = 0
-; authordep Dist::Zilla::Plugin::NextRelease::Grouped = 0.0200
 ; authordep Dist::Zilla::Plugin::PodSyntaxTests = 0
 ; authordep Dist::Zilla::Plugin::PodWeaver = 4.006
 ; authordep Dist::Zilla::Plugin::Prereqs = 0
@@ -302,11 +263,9 @@ Test::mysqld = 0
 ; authordep Dist::Zilla::Plugin::Test::Compile = 2.058
 ; authordep Dist::Zilla::Plugin::Test::EOF = 0.0501
 ; authordep Dist::Zilla::Plugin::Test::EOL = 0.18
-; authordep Dist::Zilla::Plugin::Test::Kwalitee::Extra = v0.2.1
 ; authordep Dist::Zilla::Plugin::Test::NoTabs = 0.15
 ; authordep Dist::Zilla::Plugin::Test::ReportPrereqs = 0.027
 ; authordep Dist::Zilla::Plugin::TestRelease = 0
-; authordep Dist::Zilla::Plugin::TravisYML = 1.15
 ; authordep Dist::Zilla::Plugin::UploadToCPAN = 0
 ; authordep Pod::Elemental::Transformer::List = 0
 ; authordep Pod::Weaver::Plugin::SingleEncoding = 0
